升级jdk21相关的Jar包